# sfs-sr-single

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
apps/sfs/: CMakeLists.txt  main.cpp
apps/sfs/include/: optimizer.h  parameters.h
apps/sfs/scripts/: albedo.py  combine.py  create_data_from_depth.py  create_testdata.py  degrade.py  eval.db  eval_db_time.py  eval_pyramids.py  eval_run_grid.py  eval_run_search.py  get_intrinsics.py  mix_albedo.py  pyramid.py  sfs_gamma.py  sfs_mu.py  sfs_mu_gamma.py  sfs_nu.py  smooth.py  sweep_admm.py  sweep_gamma.py  vis.py
apps/sfs/src/: optimizer.cpp
data/android/: K_hr.txt
data/minion/: K_hr.txt  K_lr.txt
data/monkey/: K_lr.txt
libcore/: CMakeLists.txt
libcore/include/core/: camera.h  cuda.h  cuda_kernel.h  frame.h  graph.h  image.h  parameter.h  pose.h  pyramid.h
libcore/include/core/camera/: align.h  camera.h  intrinsics.h
libcore/include/core/cuda/: arithmetic.h  environment.h  image_ops.h  interpolation.h  smem.h  utils.h
libcore/include/core/parameter/: base.h  float.h  graph.h  image.h  int.h  named.h
libcore/src/: frame.cpp  graph.cpp  pyramid.cpp.old
libcore/src/camera/: align.cpp  camera.cpp  intrinsics.cpp
libcore/src/cuda/: arithm.cu  environment.cpp
libcore/src/parameter/: float.cpp  graph.cpp  int.cpp  named.cpp
libcore/test/: test_camera.cpp  test_environment.cpp  test_parameters.cpp
libdata/: CMakeLists.txt
libdata/include/data/: dataset.h  dataset_assoc.h  dataset_index.h
libdata/include/data/datasets/: intrinsic3d.h  tum.h
libdata/src/: dataset.cpp  dataset_assoc.cpp  dataset_index.cpp
libdata/src/datasets/: intrinsic3d.cpp  tum.cpp
libimage/: CMakeLists.txt
libimage/include/image/: data.h  evaluation.h  filter.h  processing.h
libimage/include/image/evaluation/: base.h
libimage/include/image/filter/: discontinuity.h  filter_cu.h  mumfordshah.h  mumfordshah_cu.h
libimage/include/image/processing/: base.h  color.h  depth.h  normals.h
libimage/src/: data.cpp
libimage/src/evaluation/: base.cpp  eval.cu  eval_cu.h
libimage/src/filter/: bilateral.cu  discontinuity.cu  mumfordshah.cu
libimage/src/processing/: color.cpp  color.cu  color_cu.h  depth.cpp  depth.cu  depth_bilateral.cu  depth_blur.cu  depth_cu.h  normals.cpp  normals.cu  normals_cu.h
libimage/test/: test_depthprocessing.cpp  test_filter.cpp.nr  test_filter_inpaint.cpp.nr  test_filter_mumfordshah.cpp  test_pyramid.cpp.nr
libsolver/: CMakeLists.txt
libsolver/include/solver/: optimizer.h  solver.h
libsolver/include/solver/optimizer/: albedo.h  auxiliary.h  depth.h  inpaint.h  inpaint_cu.h  lagrange.h  lighting.h  lighting_cu.h  theta_cu.h
libsolver/include/solver/solver/: solver_base.h  solver_ceres.h  solver_iteration.h  solver_lineq.h  solver_opt.h  solver_parameters.h
libsolver/src/opt/: inpaintNan.t  updateDepth.t  updateTheta copy.t  updateTheta.t
libsolver/src/optimizer/: albedo.cpp  auxiliary.cpp  depth.cpp  inpaint.cpp  inpaint.cu  lagrange.cpp  lighting.cpp  lighting.cu  theta.cu
libsolver/src/solver/: solver.cpp  solver_lineq.cpp  solver_lineq.cu  solver_lineq_cu.h  solver_opt.cpp
libsolver/test/: test_albedoupdate.cpp  test_combined.cpp  test_depthupdate.cpp  test_inpaint.cpp  test_lightupdate.cpp  test_parts.cpp  test_solver_sparse_lineq.cpp.old  test_thetaupdate.cpp
libsolver/test/opt/: gradient_theta.t  image.t  minimal_surface.t  minimal_surface_value.t  normals.t  shading.t  shape_from_shading.t  theta_to_image.t
