SET(LIB_NAME data)

FILE(GLOB INCLUDES "include/${LIB_NAME}/*.h" "include/${LIB_NAME}/**/*.h")
FILE(GLOB SOURCES  "src/*.cpp" "src/*/*.cpp" "src/*.cu" "src/*/*.cu")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_LIBRARY(${LIB_NAME} STATIC ${INCLUDES} ${SOURCES})

SET(LIBRARIES
    ${OpenCV_LIBS}
    cuimage
    cudart
    core
)

CUDA_ADD_CUBLAS_TO_TARGET(${LIB_NAME})

TARGET_LINK_LIBRARIES(${LIB_NAME}
    ${LIBRARIES}
)

SET_TARGET_PROPERTIES(${LIB_NAME}
    PROPERTIES LINKER_LANGUAGE CXX
    # COMPILE_FLAGS
    # LINK_FLAGS
)
